@@ -36,11 +36,7 @@ PQXX_HAVE_PQCANCEL	internal	libpq
 PQXX_HAVE_PQCLIENTENCODING	internal	libpq
 PQXX_HAVE_PQSETERRORVERBOSITY	internal	libpq
 PQXX_HAVE_PQDESCRIBEPORTAL	internal	libpq
-PQXX_HAVE_PQESCAPEBYTEA	internal	libpq
-PQXX_HAVE_PQESCAPEBYTEACONN	internal	libpq
-PQXX_HAVE_PQESCAPESTRING	internal	libpq
 PQXX_HAVE_PQESCAPELITERAL	internal	libpq
-PQXX_HAVE_PQESCAPESTRINGCONN	internal	libpq
 PQXX_HAVE_PQESCAPEIDENTIFIER	internal	libpq
 PQXX_HAVE_PQPREPARE	internal	libpq
 PQXX_HAVE_PQEXECPARAMS	internal	libpq
@@ -55,7 +51,6 @@ PQXX_HAVE_PQFTABLE	internal	libpq
 PQXX_HAVE_PQFTABLECOL	internal	libpq
 PQXX_HAVE_PQPUTCOPY	internal	libpq
 PQXX_HAVE_PQRESULTERRORFIELD	internal	libpq
-PQXX_HAVE_PQUNESCAPEBYTEA	internal	libpq
 PQXX_HAVE_PQUNESCAPEBYTEA_9	internal	libpq
 PQXX_HAVE_PQCLIENTENCODING	internal	libpq
 PQXX_HAVE_PQMBLEN	internal	libpq
