@@ -2,6 +2,7 @@
  - API change: noticers are gone!  Use errorhandlers to capture error output.
  - API change: fields and tuples are now stand-alone classes in ::pqxx.
  - Fixes compatibility problems between 9.x libpq and 7.x backend.
+ - Ancient libpq versions without PQescapeStringConn are now absolutely dead.
  - Changes for C++0x.
  - Supports clang++.
  - Fixes binary-data escaping problems with postgres 9.0.
